# differentiation

./: README.md  differentiation.cabal  stack.yaml
src/: Lib.hs
src/Numeric/SD/: DStar.hs
