name:                differentiation
version:             0.1.0.0
synopsis:            
description:         Please see README.md
homepage:            https://github.com/ocramz/differentiation#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          Marco Zocca
copyright:           2016 Marco Zocca
category:            Numerical
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable differentiation-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , differentiation
  default-language:    Haskell2010

test-suite differentiation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , differentiation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/differentiation
